--- a/SkinGO/Views/Home/Index.cshtml
+++ b/SkinGO/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Skins>
+﻿@model List<Arma>
 @{
     ViewData["Title"] = "Home";
     var tipos = (List<Caracteristica>)ViewData["Caracteristicas"];
