--- a/SkinGO/Views/Home/Details.cshtml
+++ b/SkinGO/Views/Home/Details.cshtml
@@ -1,6 +1,6 @@
 ﻿@model DetailsVM
 @{
-    ViewData["Title"] = "Skins";
+    ViewData["Title"] = "Arma";
     string Cor(string nome)
     {
         return Model.Tipos
@@ -50,8 +50,8 @@
             <div class="btn-group">
                 @foreach (var tipo in Model.Atual.Tipo)
                 {
-                    <a href="#" class="btn btn-lg text-white" style="background-color:@Cor(tipo)">
-                        @tipo
+                    <a href="#" class="btn btn-lg text-white" style="background-color:@Cor(caracteristica)">
+                        @caracteristica
                     </a>
                 }
             </div>
