Ajustando Css e JS

--- a/SkinGO/Views/Shared/_Layout.cshtml
+++ b/SkinGO/Views/Shared/_Layout.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>SkinGO ["title"]</title>
+    <title>SkinGO</title>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="~/img/favicons/apple-touch-icon.png" sizes="180x180">
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <div class="collapse bg-danger" id="navbarHeader">
+        <div class="collapse bg-warning" id="navbarHeader">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-8 col-md-7 py-4">
@@ -42,8 +42,8 @@
                 </div>
             </div>
         </div>
-        <div class="navbar navbar-dark bg-danger shadow-sm">
-            <div class="container">
+        <div class="navbar navbar-dark bg-warning shadow-sm">
+            <div class="container bg-warning">
                 <a asp-controller="Home" asp-action="Index" class="navbar-brand d-flex align-items-center">
                     <img src="~/img/favicons/favicon-32x32.png" alt="CSGO" class="me-2" />
                     &nbsp;<strong>SkinGO</strong>
