--- a/SkinGO/Views/Home/Index.cshtml
+++ b/SkinGO/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                 <!-- Card skin - Fim -->
             }
 
-            <div id="zeroPokemon" class="col-lg-12 text-center">
+            <div id="zeroArma" class="col-lg-12 text-center d-none">
                 <h1 class="my-3 text-danger">Nenhuma Skin Encontrada</h1>
             </div>
         </div>
