Ajustes para finalização

--- a/SkinGO/wwwroot/css/site.css
+++ b/SkinGO/wwwroot/css/site.css
@@ -1,5 +1,5 @@
 main {
-  background-color: black;
+  background-color: rgb(255, 255, 255);
 }
 .card img {
   background-color: rgb(82, 82, 82);
@@ -14,4 +14,8 @@ main {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.navbar {
+  background-color: #f96f2f;
 }
