--- a/SkinGO/Views/Shared/_Layout.cshtml
+++ b/SkinGO/Views/Shared/_Layout.cshtml
@@ -42,8 +42,8 @@
                 </div>
             </div>
         </div>
-        <div class="navbar navbar-dark bg-warning shadow-sm">
-            <div class="container bg-warning">
+        <div class="navbar navbar-dark  shadow-sm">
+            <div class="container ">
                 <a asp-controller="Home" asp-action="Index" class="navbar-brand d-flex align-items-center">
                     <img src="~/img/favicons/favicon-32x32.png" alt="CSGO" class="me-2" />
                     &nbsp;<strong>SkinGO</strong>
