--- a/SkinGO/Views/Home/Index.cshtml
+++ b/SkinGO/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <section class="pt-5 pb-3 text-center container">
     <div class="row">
         <div class="col mx-auto">
-            <h1>Skins CSGO</h1>
+            <h1 class="cs">Skins CSGO</h1>
             <div class="group">
                 <button id="btn-all" class="btn btn-md my-2 text-white bg-dark btn-filter"
                     onclick="filter('all')">
@@ -35,14 +35,14 @@
 <div class="py-5 bg-dark">
     <div class="container">
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-3">
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             @foreach (var arma in Model)
             {
                 <!-- Card Pokemon - Inicio -->
                 <div class="col" onclick="window.location = '/Home/Details/@arma.Numero'">
                     <div class="card shadow-sm cursor-pointer @string.Join(' ', arma.Caracteristica)">
                             <img src="@arma.Imagem" class="card-img-top" width="100%" height="300" alt="@arma.Nome" />
-                            <div class="card-body">
+                            <div class="card-body bg-dark">
                             <p class="card-text mb-0">N° @arma.Numero.ToString("000")</p>
                             <h3 class="card-title">@arma.Nome</h3>
                             <div class="btn-group">
