--- a/SkinGO/Views/Shared/_Layout.cshtml
+++ b/SkinGO/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
             <div class="container ">
                 <a asp-controller="Home" asp-action="Index" class="navbar-brand d-flex align-items-center">
                     <img src="~/img/favicons/favicon-32x32.png" alt="CSGO" class="me-2" />
-                    &nbsp;<strong>SkinGO</strong>
+                    &nbsp;<strong class="cs">SkinGO</strong>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader"
                     aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
