--- a/SkinGO/wwwroot/css/site.css
+++ b/SkinGO/wwwroot/css/site.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.cdnfonts.com/css/counter-strike');
+
+
 main {
   background-color: rgb(255, 255, 255);
 }
+
 .card img {
   background-color: rgb(82, 82, 82);
 }
@@ -18,4 +22,16 @@ main {
 
 .navbar {
   background-color: #f96f2f;
+}
+
+.fs-1 {
+  color: white;
+}
+
+.cs {
+  font-family: counter-strike;
+}
+
+.card-text, .card-title {
+  color: white;
 }
