--- a/SkinGO/Views/Home/Index.cshtml
+++ b/SkinGO/Views/Home/Index.cshtml
@@ -32,7 +32,7 @@
     </div>
 </section>
 
-<div class="py-5 bg-dark">
+<div id="back" >
     <div class="container">
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
