Acrescentando fundo animado para o projeto

--- a/SkinGO/Views/Home/Details.cshtml
+++ b/SkinGO/Views/Home/Details.cshtml
@@ -10,27 +10,28 @@
 
     }
 }
-<section class="pt-5 container">
+
+<section class="pt-5 text-white  container">
     <div class="row">
         <div class="col text-center">
             @if (Model.Anterior != null)
             {
-                <a asp-action="Details" asp-route-id="@Model.Anterior.Numero" class="btn btn-lg btn-outline-dark">
+                <a asp-action="Details" asp-route-id="@Model.Anterior.Numero" class="btn btn-lg btn-outline-light">
                     @Model.Anterior.Numero.ToString("000") - @Model.Anterior.Nome
                 </a>
             }
         </div>
 
-        <div class="col text-center">
+        <div class="col text-white text-center">
             <h1 class="fs-3">@Model.Atual.Nome
-                <span class="fs-2 text-secondary">Nº @Model.Atual.Numero.ToString("000")</span>
+                <span class="fs-2 text-white text-secondary">Nº @Model.Atual.Numero.ToString("000")</span>
             </h1>
         </div> 
 
         <div class="col text-center">
             @if (Model.Proximo != null)
             {
-                <a asp-action="Details" asp-route-id="@Model.Proximo.Numero" class="btn btn-lg btn-outline-dark">
+                <a asp-action="Details" asp-route-id="@Model.Proximo.Numero" class="btn btn-lg btn-outline-light">
                     @Model.Proximo.Numero.ToString("000") - @Model.Proximo.Nome
                 </a>
             }
