--- a/SkinGO/Views/Shared/_Layout.cshtml
+++ b/SkinGO/Views/Shared/_Layout.cshtml
@@ -57,12 +57,17 @@
     </header>
 
     <main>
+        <div class="background-video">
+            <video autoplay muted loop> 
+                <source src="~/img/video/backg.mp4" type="">
+            </video>
+        </div>
         @RenderBody()
 
 
     </main>
 
-    <footer class="text-muted py-3 ">
+    <footer class="text-muted  py-3 ">
         <div class="container">
             <p class="float-end">
                 <a href="#">
@@ -73,8 +78,8 @@
                     </svg>
                 </a>
             </p>
-            <p class="mb-1">SkinGo - Joao Vitor Ribeiro</p>
-            <p class="mb-0">Projeto Integrador desenvolvido para as aulas de Interfaces WEB I e Sistemas Web I</p>
+            <p class="mb-1 text-white">SkinGo - Joao Vitor Ribeiro</p>
+            <p class="mb-0 text-white">Projeto Integrador desenvolvido para as aulas de Interfaces WEB I e Sistemas Web I</p>
         </div>
     </footer>
 
