--- a/SkinGO/wwwroot/css/site.css
+++ b/SkinGO/wwwroot/css/site.css
@@ -2,7 +2,7 @@
 
 
 main {
-  background-color: #fff;
+  
 }
 
 #back{
@@ -10,8 +10,8 @@ main {
   box-shadow: 15px 0 10px #000000b4;
 }
 
-#back {
-  background-image: url(../img/csgo.jpg);
+footer {
+  background-color: #1a1a1a;
 }
 
 button:hover {
@@ -72,4 +72,16 @@ button:hover {
 
 #navbarHeader {
   background-color: #f96f2f;
+}
+
+.background-video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+.background-video video{
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
