Finalizando para apresentação

--- a/SkinGO/Views/Home/Details.cshtml
+++ b/SkinGO/Views/Home/Details.cshtml
@@ -10,7 +10,11 @@
 
     }
 }
-
+<div class="background-video">
+            <video autoplay muted loop> 
+                <source src="~/img/video/backg.mp4" type="">
+            </video>
+        </div>
 <section class="pt-5 text-white  container">
     <div class="row">
         <div class="col text-center">
