--- a/SkinGO/Views/Shared/_Layout.cshtml
+++ b/SkinGO/Views/Shared/_Layout.cshtml
@@ -34,9 +34,8 @@
                     <div class="col-sm-4 offset-md-1 py-4">
                         <h4 class="text-white">Contatos</h4>
                         <ul class="list-unstyled">
-                            <li><a href="#" class="text-white">Follow on GitHub</a></li>
-                            <li><a href="#" class="text-white">Follow on Linkedin</a></li>
-                            <li><a href="#" class="text-white">E-mail</a></li>
+                            <li><a href="https://github.com/RibahDev" class="text-white">Follow on GitHub</a></li>
+                            <li><a href="https://www.linkedin.com/in/jo%C3%A3o-vitor-ribeiro-240a97263/" class="text-white">Follow on Linkedin</a></li>
                         </ul>
                     </div>
                 </div>
@@ -57,22 +56,15 @@
     </header>
 
     <main>
-        <div class="background-video">
-            <video autoplay muted loop> 
-                <source src="~/img/video/backg.mp4" type="">
-            </video>
-        </div>
+        
         @RenderBody()
-
-
     </main>
-
     <footer class="text-muted  py-3 ">
         <div class="container">
             <p class="float-end">
                 <a href="#">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
-                        class="bi bi-arrow-up-circle-fill text-warning" viewBox="0 0 16 16">
+                        class="bi bi-arrow-up-circle-fill text-info" viewBox="0 0 16 16">
                         <path
                             d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z" />
                     </svg>
