--- a/SkinGO/Views/Home/Index.cshtml
+++ b/SkinGO/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <section class="pt-5 pb-3 text-center  container">
     <div class="row">
         <div class="col mx-auto">
-            <h1 class="cs">Skins CSGO</h1>
+            <h1 class="cs text-dark">Skins CSGO</h1>
             <div class="group">
                 <button id="btn-all" class="btn btn-md my-2 text-white bg-dark btn-filter"
                     onclick="filter('all')">
