--- a/SkinGO/wwwroot/css/site.css
+++ b/SkinGO/wwwroot/css/site.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.cdnfonts.com/css/counter-strike');
 
+html, body {
+  position: relative;
+}
 
 main {
-  
+  width: 100%;
+  height: 100%;
 }
 
 #back{
@@ -10,7 +14,10 @@ main {
   box-shadow: 15px 0 10px #000000b4;
 }
 
+
 footer {
+  bottom: 0;
+  width: 100%;
   background-color: #1a1a1a;
 }
 
@@ -21,6 +28,8 @@ button:hover {
 }
 
 .card img {
+    height: 100%;
+    width: 100%;
     background-image: url(../img/fundo.png);
     background-position: center center;
     background-repeat: no-repeat;
@@ -32,7 +41,7 @@ button:hover {
 }
 
 .card:hover {
-  border: 3px solid #d19300;
+  border: 3px solid #01aaff;
   transform: scale(1.10);
   transition: 0.8s;
   z-index: 1000;
@@ -43,7 +52,7 @@ button:hover {
 }
 
 .navbar {
-  background-color: #f96f2f;
+  background-color: #466a7c;
 }
 
 .fs-1 {
@@ -60,28 +69,30 @@ button:hover {
 
 .img-fluid {
   transition: 0.5s;
-  filter: drop-shadow(-5px 5px 5px #0000006b);
+  filter: drop-shadow(-5px 5px 5px #00000045);
 }
 
 .img-fluid:hover {
   transform: scale(1.10);
   transition: 0.8s;
-  filter: drop-shadow(-10px 7px 7px #0000006b);
+  filter: drop-shadow(-10px 7px 7px #00000048);
 
 }
 
 #navbarHeader {
-  background-color: #f96f2f;
+  background-color: #43738a;
 }
 
 .background-video {
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
 }
 .background-video video{
-    position: absolute;
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
